editing styles for chat application

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="./css/index.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 
 <body>
@@ -26,7 +28,7 @@
     </div>
     <div class="row">
       <div class="app-title">
-        <h2 class="center-text">Feathers Chat Application</h2>
+        <h2 class="center-text">Chat Room 1</h2>
       </div>
     </div>
     <div class="row">
