--- a/public/login.html
+++ b/public/login.html
@@ -11,12 +11,14 @@
     crossorigin="anonymous">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="./css/master.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
 
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 col-centered">
         <h2>Login to Chat</h2>
         <br/>
         <form id="login-user-form">
