working on ability to append chat messages to chat room

--- a/public/index.html
+++ b/public/index.html
@@ -74,9 +74,11 @@
               </div>
               <h4 class="media-heading">Megan Cole</h4>
               <span class="comment-date">08-02-2018 9:00 AM</span>
-              <br/>
-              <br/> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos similique enim saepe dolore quibusdam corrupti,
-              cumque quis neque laudantium reiciendis accusamus nostrum alias fugiat quo id assumenda aliquid beatae harum.
+              <br />
+              <br /> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos similique enim saepe dolore quibusdam
+              corrupti,
+              cumque quis neque laudantium reiciendis accusamus nostrum alias fugiat quo id assumenda aliquid beatae
+              harum.
             </div>
           </div>
 
@@ -94,9 +96,11 @@
               </div>
               <h4 class="media-heading">Megan Cole</h4>
               <span class="comment-date">08-02-2018 9:01 AM</span>
-              <br/>
-              <br/> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos similique enim saepe dolore quibusdam corrupti,
-              cumque quis neque laudantium reiciendis accusamus nostrum alias fugiat quo id assumenda aliquid beatae harum.
+              <br />
+              <br /> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos similique enim saepe dolore quibusdam
+              corrupti,
+              cumque quis neque laudantium reiciendis accusamus nostrum alias fugiat quo id assumenda aliquid beatae
+              harum.
             </div>
           </div>
         </div>
