--- a/public/login.html
+++ b/public/login.html
@@ -20,20 +20,20 @@
     <div class="row">
       <div class="col-md-3 col-centered">
         <h2>Login to Chat</h2>
-        <br/>
+        <br />
         <form id="login-user-form">
           <label>Email</label>
           <input id="login-email" type="text" class="form-control" name="email" placeholder="Enter your email">
-          <br/>
+          <br />
           <label>Password</label>
           <input id="login-password" type="password" class="form-control" name="password" placeholder="Enter your password">
-          <br/>
+          <br />
           <a href="/account.html">Don't have an account? Create one now!</a>
-          <br/>
-          <br/>
-          <input type="submit" id="login-button" class="btn">
+          <br />
+          <br />
+          <input type="submit" id="login-button" class="btn" value="Login">
         </form>
-        <br/>
+        <br />
         <div class="alert alert-danger" id="error-message">
           There was an error processing your request. Boo!
         </div>
