--- a/public/index.html
+++ b/public/index.html
@@ -60,49 +60,7 @@
       <!-- right content area -->
       <div class="col-md-9 margin-top main-border">
         <div id="chat-message-area">
-          <div class="media">
-            <div class="media-left">
-              <a href="#">
-                <img src="./images/icon.png" alt="64x64 user profile image" class="media-object" style="width: 64px; height: 64px;">
-              </a>
-            </div>
-            <div class="media-body">
-              <div class="pull-right">
-                <span class="delete-comment" title="Delete Comment?">
-                  <i class="fa fa-times" aria-hidden="true"></i>
-                </span>
-              </div>
-              <h4 class="media-heading">Megan Cole</h4>
-              <span class="comment-date">08-02-2018 9:00 AM</span>
-              <br />
-              <br /> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos similique enim saepe dolore quibusdam
-              corrupti,
-              cumque quis neque laudantium reiciendis accusamus nostrum alias fugiat quo id assumenda aliquid beatae
-              harum.
-            </div>
-          </div>
-
-          <div class="media">
-            <div class="media-left">
-              <a href="#">
-                <img src="./images/icon.png" alt="64x64 user profile image" class="media-object" style="width: 64px; height: 64px;">
-              </a>
-            </div>
-            <div class="media-body">
-              <div class="pull-right">
-                <span class="delete-comment" title="Delete Comment?">
-                  <i class="fa fa-times" aria-hidden="true"></i>
-                </span>
-              </div>
-              <h4 class="media-heading">Megan Cole</h4>
-              <span class="comment-date">08-02-2018 9:01 AM</span>
-              <br />
-              <br /> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos similique enim saepe dolore quibusdam
-              corrupti,
-              cumque quis neque laudantium reiciendis accusamus nostrum alias fugiat quo id assumenda aliquid beatae
-              harum.
-            </div>
-          </div>
+          <!-- insert messages here on page load -->
         </div>
         <div class="margin-top">
           <form id="submit-message-form">
